<resources>
    <string name="app_name">FireWatch</string>
    <string name="title_activity_main">Home Page</string>
    <string name="hello_blank_fragment">No content!</string>
    <string name="forgotPassword"><u>Forgot your password?</u></string>
    <string name="sign_up_account"><u>Register Account</u></string>
    <string name="dont_have_account">No account?</string>
    <string name="show_password">Show Password</string>
    <string name="log_enter">LOG IN</string>
    <string name="register_header">Register</string>
    <string name="register_continue">continue</string>
    <string name="exbition_name">Display Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_contact">Telephone contact</string>
    <string name="home">Home</string>
    <string name="burns">Burns</string>
    <string name="profile">Profile</string>
    <string name="insert_burn">Register Burn</string>
    <string name="active_burns_title">Burns</string>
    <string name="search">Search</string>
    <string name="active_burns">Active</string>
    <string name="terminate_btn">Finish</string>
    <string name="settings_title">Settings</string>
    <string name="language">Language</string>
    <string name="size_component">Size of Visual Components</string>
    <string name="end_session">Log Out</string>
    <string name="register_title">Register</string>
    <string name="profile_update_title">Update</string>
    <string name="edit_detail_title">Edit</string>
    <string name="detail_remove">Remove</string>
    <string name="update_burn_message_aid_team">Requests help in identifying support staff</string>
    <string name="burn_name">Name</string>
    <string name="register">Register</string>
    <string name="burn_is_good_to_go">Burning can be carried out</string>
    <string name="comeback">Go Back</string>
    <string name="burn_is_not_good_to_go">Burning cannot be carried out</string>
    <string name="pdf_is_on_your_side">The PDF relating to this burn has been sent to your email address</string>
    <string name="put_code_forgot">Enter the Code</string>
    <string name="change_password">Change the Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="change_password_profile"><u>Change Password</u></string>
    <string name="Resoan">Motive</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type">Type</string>
    <string name="created_at">Created:</string>
    <string name="autarchies">Autarchies</string>
    <string name="autarchies_title">Autarchies</string>
    <string name="autarchy_name">Name of Autarchy</string>
    <string name="street">Street</string>
    <string name="door_number">Door number</string>
    <string name="zip_code">Zip Code</string>
    <string name="city">Locality</string>
    <string name="VAT_NUMBER">VAT Number</string>
    <string name="terms"><![CDATA[Note: agreeing to register as a user implies knowledge and acceptance of: i) Terms and conditions; ii) Privacy policy; iii) Declaration of Consent to the Processing of Personal Data.]]></string>
    <string name="date_init">Date</string>
    <string name="store_location">SAVE</string>
    <string name="sanitary_burn">Sanitary Burn</string>
    <string name="agritoralwastemana">Agricultural Waste Management</string>
    <string name="forest_waste_management">Forestry waste management</string>
    <string name="bush_management">Bush Management</string>
    <string name="others">Others</string>
    <string name="burn">Burn</string>
    <string name="lat_not_defined">Lat: Not Defined</string>
    <string name="lon_not_defined">Lon: Not Defined</string>
    <string name="search_interval">Search range</string>
    <string name="schedual">Scheduled</string>
    <string name="schedualed">Scheduled</string>
    <string name="finish">Finish</string>
    <string name="start">Get started</string>
    <string name="repeat">Repeat</string>
    <string name="update_profile_title">Update Profile</string>
    <string name="nif">VAT Number</string>
    <string name="username">User Name</string>
    <string name="email">Email</string>
    <string name="completed">Completed</string>
    <string name="send_forgot">Please provide an email to send an forgot request</string>
    <string name="rejected">Rejected</string>
    <string name="active">Active</string>
    <string name="contacts">"Contacts: "</string>
    <string name="email_ou_nif">Email or NIF</string>
    <string name="active_burns_logic">Active Burns</string>
    <string name="rules">Rules</string>
    <string name="vat_title">"VAT: "</string>
    <string name="last_burns">Last Burns</string>
    <string name="agreement">Agrees to the recording of personal data for the purpose of processes related to the registration of authorizations for heap burning and extensive burning *</string>
    <string name="english_lang">English</string>
    <string name="portuguese_lang">Portuguese</string>
    <string name="greece_lang">Greek</string>
    <string name="frenche">French</string>
    <string name="please_provide_an_email">Please provide an email</string>
    <string name="please_provide_an_valid_email">Please provide an valid Email</string>
    <string name="please_provide_an">"Please provide an "</string>
    <string name="please_provide_a_valid_coordinate">Please provide a valid coordinate</string>
    <string name="please_provide_an_possible_date">please provide an possible date</string>
    <string name="please_provide_an_nif">Please provide an nif</string>
    <string name="please_provide_an_valid_nif">Please provide an valid nif</string>
    <string name="passwords_are_not_the_same">Passwords are not the same</string>
    <string name="please_provide_an_password">Please Provide an Password</string>
    <string name="password_must_contain_at_least_one_uppercase_letter">Password must contain at least one uppercase letter</string>
    <string name="password_must_contain_at_least_one_lowercase_letter">Password must contain at least one lowercase letter</string>
    <string name="password_must_contain_at_least_one_digit">Password must contain at least one digit</string>
    <string name="password_must_be_between_6_and_16_characters_long">Password must be between 6 and 16 characters long</string>
    <string name="provide_an_valid_phone_number_or_code">Provide an valid phone number or code</string>
    <string name="provide_an_valid_country_code">Provide an valid country code</string>
    <string name="the_phone_number_must_be_9_digits">The Phone number must be 9 digits</string>
    <string name="please_provide_an_zip_code">Please provide an zip code</string>
    <string name="format_of_an_zip_code_4444_444">Format of an zip code 4444–444</string>
    <string name="welcome">Welcome to FireWatch</string>
    <string name="welcome_message">FireWatch make it easy to manage your burns</string>
    <string name="phone">Phone</string>
    <string name="iniit_at">"Iniciada a: "</string>
    <string name="internet_up">Internet UP!</string>
    <string name="internet_down">Internet Down!</string>
    <string name="need_connection">Is needed connection to the Internet to perform this action</string>
</resources>
