<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/horizontal_active"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/active_burns"
        android:layout_marginEnd="10dp"
        android:background="@color/middle_gray"
        android:textColor="@color/white"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/horizontal_scheduled"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:text="@string/schedual"
        android:background="@color/middle_gray"
        android:textColor="@color/white"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/horizontal_completed"
        android:layout_height="40dp"
        android:layout_width="100dp"
        android:layout_marginStart="10dp"
        android:text="@string/completed"
        android:background="@color/middle_gray"
        android:textColor="@color/white"
    />
</LinearLayout>