<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.firewatch.presentation.viewModels.auth.RegisterViewModel" />
    </data>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.views.auth.stages.RegisterStageTwo"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:fillViewport="true"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/app_background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="80dp"
            >

            <com.example.firewatch.presentation.components.stageSwiper.SwiperBody
                android:id="@+id/swiperHeader"
                app:position="2"
                android:layout_width="match_parent"
                app:header="@string/register_title"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/fields_profile_1"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/continue_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/swiperHeader">

                <com.example.firewatch.presentation.components.textField.TextField
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:inputText="@string/email"
                    app:text="@={viewModel.email}"
                    app:error="@={viewModel.emailValidator.error}"
                    app:input_type="normal" />

                <com.example.firewatch.presentation.components.textField.TextField
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:inputText="@string/street"
                    app:text="@={viewModel.street}"
                    app:error="@={viewModel.streetValidator.error}"
                    app:input_type="normal" />

                <com.example.firewatch.presentation.components.textField.TextField
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:error="@={viewModel.streetNumberValidator.error}"
                    app:inputText="@string/door_number"
                    app:text="@={viewModel.streetNumber}"
                    app:input_type="normal" />

                <com.example.firewatch.presentation.components.textField.TextField
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:error="@={viewModel.zipCodeValidator.error}"
                    app:inputText="@string/zip_code"
                    app:text="@={viewModel.zipCode}"
                    app:input_type="normal" />

                <com.example.firewatch.presentation.components.textField.TextField
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:error="@={viewModel.cityValidator.error}"
                    app:inputText="@string/city"
                    app:text="@={viewModel.city}"
                    app:input_type="normal" />
            </LinearLayout>

            <Button
                android:id="@+id/continue_btn"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="25dp"
                android:layout_height="70dp"
                android:layout_below="@+id/fields_profile_1"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/register_continue"
                style="@style/DefaultButtonStyle"
                tools:layout_editor_absoluteX="16dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>