<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="com.example.firewatch.presentation.viewModels.auth.MainViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:background="@color/app_background">

        <ImageView
            android:id="@+id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            android:src="@drawable/login_header"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true" />

        <LinearLayout
            android:id="@+id/fields_passwd"
            android:layout_below="@id/login_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:gravity="center">
            <com.example.firewatch.presentation.components.textField.TextField
                android:id="@+id/log_txt_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:inputText="Email ou NIF"
                app:input_type="email"
                app:text="@={viewModel.email}"
                app:error="@={viewModel.emailValidator.error}"
                />

            <com.example.firewatch.presentation.components.textField.TextField
                android:id="@+id/log_txt_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:error="@={viewModel.passwordValidator.error}"
                app:inputText="Palavra-Chave"
                app:input_type="password"
                app:text="@={viewModel.password}" />

            <TextView
                android:id="@+id/forgot_password_link"
                android:textAlignment="textEnd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textAppearance="@style/textStyle"
                android:text="@string/forgotPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="25dp"
            android:layout_marginBottom="40dp"
            >
            <CheckBox
                android:id="@+id/checkbox_meat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/textStyle"
                android:textColor="@color/white"
                android:text="@string/show_password"
                android:layout_marginStart="25dp"
                />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:onClick="@{() -> viewModel.login()}"
                android:text="@string/log_enter"
                style="@style/DefaultButtonStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dont_have_account"
                    style="@style/textStyle"
                    android:layout_weight="1"
                    android:textAlignment="textEnd"
                    />

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/register_account_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_account"
                    android:layout_weight="1"
                    style="@style/textStyle"
                    />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</layout>
